// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Checkbox Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="sc-dPaNzc diKRPN sc-bBjRSN cAhuws"
    >
      <label
        class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 khrfCP"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 gprQIL StyledCheckBox-sc-1dbk5ju-6 cKmmdu"
        >
          <input
            class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cUBbSF"
            type="checkbox"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 cMvHdd StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 UuYxY"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Checkbox Disabled 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="sc-dPaNzc diKRPN sc-bBjRSN cAhuws"
    >
      <label
        class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 bFQGcy"
        disabled=""
      >
        <div
          class="StyledBox-sc-13pk1d4-0 iqDqTy StyledCheckBox-sc-1dbk5ju-6 cKmmdu"
          disabled=""
        >
          <input
            class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 bqLGVJ"
            disabled=""
            type="checkbox"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 cMvHdd StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 UuYxY"
            disabled=""
          />
        </div>
        <span>
          Checkbox
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Checkbox Reversed Label 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="sc-dPaNzc diKRPN sc-bBjRSN cAhuws"
    >
      <label
        class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 khrfCP"
      >
        <span>
          Checkbox
        </span>
        <div
          class="StyledBox-sc-13pk1d4-0 hafFhG StyledCheckBox-sc-1dbk5ju-6 cKmmdu"
        >
          <input
            class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cUBbSF"
            type="checkbox"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 cMvHdd StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 UuYxY"
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Checkbox Toggle 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="sc-dPaNzc diKRPN sc-bBjRSN cAhuws"
    >
      <label
        class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 khrfCP"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 iqDqTy StyledCheckBox-sc-1dbk5ju-6 cKmmdu"
        >
          <input
            class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cUBbSF"
            type="checkbox"
          />
          <span
            class="StyledCheckBox__StyledCheckBoxToggle-sc-1dbk5ju-4 kgyMEf"
          >
            <span
              class="StyledCheckBox__StyledCheckBoxKnob-sc-1dbk5ju-5 cqIUVv"
            />
          </span>
        </div>
        <span>
          Toggle
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Checkbox With Label 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="sc-dPaNzc diKRPN sc-bBjRSN cAhuws"
    >
      <label
        class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 khrfCP"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 iqDqTy StyledCheckBox-sc-1dbk5ju-6 cKmmdu"
        >
          <input
            class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cUBbSF"
            type="checkbox"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 cMvHdd StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 UuYxY"
          />
        </div>
        <span>
          Checkbox
        </span>
      </label>
    </div>
  </div>
</div>
`;
